--- a/frontend/assets/scss/styles.scss
+++ b/frontend/assets/scss/styles.scss
@@ -40,7 +40,7 @@ $input-btn-border-width:        0 !default;
 // button
 
 $btn-border-width:              0 !default;
-$btn-disabled-opacity:          .5 !default;
+$btn-disabled-opacity:          1 !default;
 
 $btn-hover-bg-shade-amount:     35% !default;
 $btn-hover-bg-tint-amount:      35% !default;
@@ -131,6 +131,8 @@ $modal-backdrop-opacity:        .75 !default;
 
 * { -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
+textarea { -webkit-user-select: initial; -khtml-user-select: initial; -moz-user-select: initial; -ms-user-select: initial; user-select: initial;  }
+
 html, body, #__nuxt { width:100%; height:100%; overflow:hidden; }
 
 body { background-image: url('~assets/img/bk.jpg'); background-size: cover; }
@@ -150,4 +152,6 @@ body { background-image: url('~assets/img/bk.jpg'); background-size: cover; }
 .bg-transparent { background: transparent !important; }
 
 .btn-primary:hover { color: #fff; background-color: #192c57; border-color: #1e366b; }
+.btn-primary:disabled, .btn-primary.disabled { color: $light; background-color: $secondary; }
+
 .btn-secondary:active, .btn-secondary.active { color: $white; background-color: $primary; }
