--- a/frontend/assets/scss/styles.scss
+++ b/frontend/assets/scss/styles.scss
@@ -129,8 +129,6 @@ $modal-backdrop-opacity:        .75 !default;
 
 ////////////////////////////////////////////////////////////////////////////////
 
-* { -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
-
 textarea { -webkit-user-select: initial; -khtml-user-select: initial; -moz-user-select: initial; -ms-user-select: initial; user-select: initial;  }
 
 html, body, #__nuxt { width:100%; height:100%; overflow:hidden; }
@@ -139,7 +137,8 @@ body { background-image: url('~assets/img/bk.jpg'); background-size: cover; }
 
 #__layout { width:100%; height:100%; overflow:hidden; display: flex; align-items: center; justify-content: center; }
 
-#wrapper { width: 100%; height: 100%; max-width: 768px; max-height: 698px; margin: auto auto; }
+#wrapper { width: 100%; height: 100%; margin: auto auto; }
+@media (min-width: 992px) { #wrapper { max-width: 768px; max-height: 698px; } }
 
 .text-muted { color: inherit!important; opacity: .75!important; }
 
